1A/tob/tps/.svn/pristine/48/48204b5d342066404daab8c32cb3661792a49c38.svn-base
allumettes/Partie.java:46: error: cannot find symbol
					default: throw new StrategieInexistanteException(strategieJoueurs[i]);
					                   ^
  symbol:   class StrategieInexistanteException
  location: class Partie
allumettes/Partie.java:71: error: cannot find symbol
		catch(StrategieInexistanteException e){
		      ^
  symbol:   class StrategieInexistanteException
  location: class Partie
2 errors
